# octocli

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
models/: user.py
src/api/: main.py  model.py
src/octocli/: __init__.py  __main__.py  cli.py  errors.py  main.py  model.py
src/octocli/cli/: dependencies.py
src/octocli/cli/models/: __init__.py  create.py
src/octocli/commands/: model.py
src/octocli/core/: __init__.py  exceptions.py  models.py
src/octocli/infrastructure/: file_service.py  template_service.py
src/octocli/presentation/: ui.py
src/octocli/schemas/: __init__.py  column.py  model.py
src/octocli/templates/models/: duplicate.py.j2  standard.py  standard.py.j2
src/octocli/templates/prefix/: prefix_base.py
src/octocli/templates/routers/: router.py
src/octocli/templates/settings/: .env.example  config.py  database.py
tests/: test_model.py
