[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OctoCLI"
version = "0.1.0"
description = "A Universal Command Line Interface (CLI) for managing FastAPI applications"
readme = "README.md"
authors = [{ name = "Samuel Bagatelli", email = "contato.samuelbagatelli@gmail.com" }]
license = { file = "LICENSE" }
keywords = ["fastapi", "sqlalchemy", "cli", "API", "REST", "model", "codegen", "manager"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Environment :: Console",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Software Development :: Code Generations",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
	"pytest>=8.0",
	"ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/samuelbagatelli/octocli"
Repository = "https://github.com/samuelbagatelli/octocli" 
"Bug Tracker" = "https://github.com/samuelbagatelli/octocli/issues"
Changelog = "https://github.com/samuelbagatelli/octocli/blob/main/CHANGELOG.md"

[project.scripts]
octo = "octocli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# --- Development Tools ---

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
src = ["src"]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
