[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "octocli"
version = "0.1.3"
description = "An Universal Command Line Interface (CLI) manager for FastAPI applications"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Samuel Bagatelli", email = "contato.samuelbagatelli@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/samuelbagatelli/octocli"
Repository = "https://github.com/samuelbagatelli/octocli"
Issues = "https://github.com/samuelbagatelli/octocli/issues"

[project.scripts]
octo = "octocli.cli:main"
